getting caught up

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-  "start": "node server.js",
-
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/Sonarie/u-develop-it/issues"
   },
-  "homepage": "https://github.com/Sonarie/u-develop-it#readme"
+  "homepage": "https://github.com/Sonarie/u-develop-it#readme",
+  "dependencies": {
+    "express": "^4.17.3",
+    "mysql2": "^2.3.3"
+  }
 }
